# filib.github.io

./: .gitignore  CNAME  Filib.hs  Main.hs  Makefile  README.md  about.html  cv.html  filib-io.cabal  index.html  philipcunningham-io.cabal  philipcunningham-org.cabal  resume.json  rss.xml  site.hs  stack.yaml
.circleci/: config.yml
_site/: README.md
css/: default.css  filib.css  highlight.css
posts/: 2011-09-27-hello-world.md  2011-10-30-connecting-processing-and-pd.md  2011-12-13-euclidean-distance-ruby.md  2011-12-13-ruby-euclidean-distance.md  2012-03-03-arduinome.md  2012-03-06-generative-chiptune.md  2012-04-04-a-miniature-update.md  2012-04-04-miniature-update.md  2012-10-23-function-composition-ruby.md  2013-04-10-computer-science-and-religion.md  2014-01-31-a-year-in-review.md  2014-11-16-fresh-start.md  2014-11-16-hello-world.md  2014-11-23-list-bag-stack.md  2015-02-23-a-year-in-review.md  2015-03-03-my-tech-radar.md  2015-03-03-my-technology-radar.md  2015-07-19-using-loggly-on-elastic-beanstalk.html  2015-07-19-using-loggly-on-elastic-beanstalk.md  2015-11-06-writing-purescript-bindings-for-a-jquery-plugin.html  2015-11-06-writing-purescript-bindings-for-a-jquery-plugin.md  2016-05-20-show-version-with-optparse-applicative.md  2017-04-24-parse-ruby-objects-in-haskell.html  2017-04-24-parse-ruby-objects-in-haskell.md  2018-12-07-testing-distributed-process-apps-with-hspec.md  2018-12-24-testing-distributed-process-apps-with-hspec.html  2018-12-24-testing-distributed-process-apps-with-hspec.md
tags/: distributed-process.html  haskell.html  hspec.html  (+5 more)
(+3 files in other folders)
