name:               filib-io
version:            0.1.0.0
build-type:         Simple
cabal-version:      >= 1.10

executable Filib
  main-is:          Filib.hs
  build-depends:    base == 4.*,
                    blaze-html,
                    hakyll == 4.6.*
  ghc-options:      -threaded
  default-language: Haskell2010
