name:               filib-io
version:            0.1.0.0
build-type:         Simple
cabal-version:      >= 1.10

executable filib-io
  main-is:          Main.hs
  build-depends:    base,
                    blaze-html,
                    containers,
                    hakyll
  ghc-options:      -threaded
  default-language: Haskell2010
